# Golang-Rust-Csharp-Comparison

./: .gitignore  README.md  file.csv  scatch.sh
c_code/: Makefile  Makefile.cares  Makefile.osx  REAME.md  curl-ca-bundle.crt  error.md  main  main.c  main.works.sh  microhttpd.md  program  scatch.txt
csharp/: CsvParser.csproj  CsvParser.sln  Main.cs  README.md
csharp/CsvParser/: CsvParser.csproj  Main.cs
csharp/CsvParser.Tests/: CsvParserTests.csproj  UnitTestFetchFile.cs  UnitTestPostgres.cs
csharp/CsvParserWeb/: CsvParserWeb.csproj  Program.cs  README.md  Startup.cs  file.csv
csharp/CsvParserWeb/CsvParser.Controllers/: Controller.cs
csharp/CsvParserWeb/Properties/: launchSettings.json
csharp/csv_parser/: Main.cs
golang/csv_parser/:  main.go  go.mod  main.go  main_test.go
perl6/: README.md  csv_parser.p6
python3/: .coverage  csv_parser.py
python3/env/: pyvenv.cfg
python3/tests/: test_csv_parser.py
rust/csv_parser/: Cargo.toml
rust/csv_parser/src/: main.rs
rust/csv_parser/tests/: _argument_tests.rs_  _database_tests.rs_  _mod.rs_  _record_tests.rs_  main_test.rs
rust/src/: main.rs
scala/: Main.scala  README.md  build.sbt
typescript/: .eslintrc.json  README.md  apis.json  csv_parser.ts  csv_parser_typeorm.ts  package-lock.json  package.json  tsconfig.json
typescript/buggs/: csv_parser.backup.ts  csv_parser.backup2.ts  csv_parser.emptry_passthrou.ts
typescript/entity/: Api.ts
typescript/src/: csv_parser.ts
