[package]
name = "csv_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


#dependencies
#csv = "1.2.1"
#postgres = "0.19.5"
#reqwest = { version = "0.11.16", features = ["blocking"] }

[dependencies]  
csv = "1.2.1"  
fmt = "0.1.0"
postgres = "0.19.5"
reqwest = { version = "0.11.16", features = ["blocking"] }  
